Kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name:  frontend
          image: 166937434313.dkr.ecr.us-east-1.amazonaws.com/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
          resources:
            requests:
              cpu: "250m"
              memory: "0.5Gi"
            limits:
              cpu: "500m"
              memory: "1Gi"

                #imagePullSecrets:
        #    - name: ecr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP
